# r-base

./: .gitignore  Cargo.toml  README.md  config.yml  log  polo.db.wal  sync_w2.sh
src/: cache_test.rs  cache_wrapper.rs  cached_test_2.rs  lib.rs  m_dao.rs  m_dyn_dao.rs  module_cfg.rs  module_init.rs  polo_dao.rs  store_kv.rs  store_kv_utils.rs  test_m_dao.rs  test_module.rs  test_polo_dao.rs  test_store_kv.rs  test_verify.rs  verify.rs
src/audios/: mod.rs  test_mp3_info.rs
src/g/: base64_utils.rs  dir.rs  float_util.rs  markdowns.rs  md5_util.rs  mod.rs  n_255.rs  n_91.rs  num_util.rs  str_util.rs  test_g.rs  test_str.rs  time_util.rs
src/rerr/: err_base.rs  mod.rs  test_err.rs
src/res/: api.rs  config.rs  init.rs  mod.rs  test_api.rs  test_init.rs  test_raw.rs
src/rlevel/: api.rs  config.rs  init.rs  mod.rs  test.rs  test_api.rs
src/rlite/: cnt.rs  mod.rs  sqlx_demo.rs  test_raw.rs
src/rlog/: _bak_init.rs  config.rs  init.rs  mod.rs  test_raw.rs
src/rmongo/: api.rs  api_raw.rs  config.rs  init.rs  mod.rs  page_utils.rs  test_api.rs  test_bson.rs  test_copy.rs  test_raw.rs
src/rmq/: api.rs  api_fanout.rs  config.rs  init.rs  mod.rs  test_api.rs  test_cnt.rs  test_raw.rs
src/rmy/: config.rs  init.rs  mod.rs  mysql_test.rs  test_rb.rs  test_sea_orm.rs  test_sqlx.rs
src/rnats/: api.rs  config.rs  init.rs  mod.rs  test.rs
src/rnatsx/: api.rs  config.rs  init.rs  test.rs
src/rpolo/: api.rs  api_raw.rs  config.rs  init.rs  mod.rs  test_cnt_1.rs
src/rr/: test.rs
src/rred/: api.rs  config.rs  init.rs  init_ok.rs  mod.rs  test_dead_pool.rs  test_init.rs
src/rsled/: api.rs  config.rs  init.rs  mod.rs  test_api.rs  test_sled.rs
src/storages/: kv_store.rs  mod.rs  test_kv_store.rs
test_sled.db/: conf  db
tests/: rmy.rs
