[package]
name = "r-base"
version = "0.1.0"
authors = ["whr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[test]]
name = "rmy"
#path = "tests/mssql/mssql.rs"
required-features = ["rmy"]


[dependencies]
tokio = {version = "1" ,features=["full" ,"test-util"]}

serde = "~1.0.136"
serde_json = "~1.0.79"
serde_derive = "~1.0.136"
serde_yaml = "^0.8"

lazy_static = "^1.4.0"

log = "^0.4"
env_logger = "^0.8"
simple-log = "^1"
#rand = "0.8.4"
rand = "0.8.5"
#uuid = { version = "0.4", features = ["serde", "v4"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
num-format = "0.4.0"

url = "^2"
# datetime
chrono = "^0.4.19"
once_cell = "^1.7.2"

deadpool = {version = "0.7" , features = ["managed"]}
async-trait = "0.1.50"

#Version 2.0.0-beta
#mongodb = "2.0.0-beta"
mongodb = "2.0.0"
#redis = "0.20"
#redis_rs = "0.9"
redisclient = "^0.1"
elasticsearch = "7.12.0-alpha.1"
futures = "^0.3"
# rabbit mq /lapin
tokio-amqp = "1.0.0"
#lapin = "^1.6"
lapin = "^2.1.1"
gjson= "^0.8"
nats = "^0.18.1"

# -----------for rbatis--begin-------
#rbatis = {version = "^3.1.15",features = ["mysql","runtime-tokio-rustls"]}
#rbson = "^2.0.5"
# logging lib(required)
#log = "0.4"
fast_log="1.3"
# -----------for rbatis--begin-------

#sea-orm = {version = "0.7.1",features = ["runtime-tokio-native-tls","sqlx-mysql"]}

# bundle
#sqlx = { version = "^0.6.0", features = [ "runtime-tokio-rustls","mysql" ] }
#ormlite = { version = "^0.3.2", features = ["sqlite", "runtime-tokio-rustls"]}

# mp3
mp3-metadata = "0.3.3"
md5 = "0.7.0"
cached = "^0.34.0"
sled = "^0.34.7"
rusty-leveldb = "1.0.2"
anyhow = "^1.0.65"

[features]
default = []
rmy = []
