[package]
name = "r-base"
version = "0.1.0"
authors = ["whr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[test]]
name = "rmy"
#path = "tests/mssql/mssql.rs"
required-features = ["rmy"]


[dependencies]
tokio = {version = "1.20" ,features=["full" ,"test-util"]}

serde = { version = "~1.0.136", features = ["default","serde_derive"]}
serde_json = { version = "~1.0.79", default-features = true }
serde_derive = { version = "~1.0.136", default-features = true }
serde_yaml = { version = "0.9.34+deprecated", default-features = true }

lazy_static = { version = "^1.4.0", default-features = true }

#log = "^0.4"
rand = { version = "0.8.5", default-features = true }
#uuid = { version = "0.4", features = ["serde", "v4"] }
uuid = { version = "1.10.0", features = ["serde", "v4"],default-features = true}
num-format = { version = "0.4.0", default-features = true }

url = { version = "^2", default-features = true }
# datetime
chrono = { version = "0.4.23", default-features = true }
once_cell = { version = "1.7.2", default-features = true }

# deadpool = {version = "^0.9" , features = ["managed"]}
async-trait = { version = "0.1.50", default-features = true }

futures = { version = "^0.3", default-features = true }
gjson= { version = "0.8", default-features = true }



# mp3
mp3-metadata = { version = "0.3.3", default-features = true }
md5 = { version = "0.7.0", default-features = true }
cached = { version = "0.53.1", default-features = true }
anyhow = { version = "1.0.86", default-features = true }
thiserror = { version = "1.0.63", default-features = true }


tracing = { version = "0.1.40", default-features = true }
tracing-appender = { version = "0.2.3", default-features = true }
tracing-subscriber = { version = "0.3.18", default-features = true }

ntapi = { version = "0.4.1", default-features = true }

#optional
mongodb = { version = "2.3.0", optional = true }
redisclient = { version = "0.1", optional = true }
elasticsearch = { version = "7.12.0-alpha.1", optional = true }
tokio-amqp = { version = "2.0.0", optional = true }
lapin = { version = "2.1.1", optional = true }
nats = { version = "0.25.0", optional = true }
sqlx = { version = "0.8.0", features = ["sqlite","mysql", "runtime-tokio-native-tls"],optional = true }
sled = { version = "0.34.7", optional = true }
rusty-leveldb = { version = "3.0.0", optional = true }
polodb_core = { version = "4.4.0", optional = true }

[dev-dependencies]
tokio = {version = "1.20" ,features=["full" ,"test-util"],default-features = true}

serde = { version = "~1.0.136"}
serde_json = { version = "~1.0.79", default-features = true }
serde_derive = { version = "~1.0.136", default-features = true }
serde_yaml = { version = "0.9.34+deprecated", default-features = true }

lazy_static = { version = "^1.4.0", default-features = true }

#log = "^0.4"
rand = { version = "0.8.5", default-features = true }
#uuid = { version = "0.4", features = ["serde", "v4"] }
uuid = { version = "1.10.0", features = ["serde", "v4"],default-features = true}
num-format = { version = "0.4.0", default-features = true }

url = { version = "^2", default-features = true }
# datetime
chrono = { version = "0.4.23", default-features = true }
once_cell = { version = "1.7.2", default-features = true }

# deadpool = {version = "^0.9" , features = ["managed"]}
async-trait = { version = "0.1.50", default-features = true }

futures = { version = "^0.3", default-features = true }
gjson= { version = "0.8", default-features = true }



# mp3
mp3-metadata = { version = "0.3.3", default-features = true }
md5 = { version = "0.7.0", default-features = true }
cached = { version = "0.53.1", default-features = true }
anyhow = { version = "1.0.65", default-features = true }
thiserror = { version = "1.0.30", default-features = true }

#sqlx = { version = "0.8.0", features = ["sqlite","mysql", "runtime-tokio-native-tls"],optional = true }


tracing = { version = "0.1.40", default-features = true }
tracing-appender = { version = "0.2.3", default-features = true }
tracing-subscriber = { version = "0.3.18", default-features = true }

ntapi = { version = "0.4.1", default-features = true }



[features]
default = []
#mysql
rmy = ["sqlx"]
##elastic-search
res = ["elasticsearch"]
##level db
rlevel = ["rusty-leveldb"]
## sqlite-sqlx
rlite = ["sqlx"]
##mongo db
rmongo = ["mongodb","default"]
##nats
rnats = ["nats"]
rmq = ["lapin"]
##polo
rpolo = ["polodb_core"]
##redis
rred = ["redisclient"]
##sled
rsled = ["sled"]